intel/bench_ready/Fir/log.txt
bench_ready/Fir/Fir.cpp:17:19: error: redefinition of 'data_in' with a different type: 'unsigned short [(1 << 10) + taps]' vs 'unsigned short *'
   unsigned short data_in[DATA_SIZE+taps];
                  ^
bench_ready/Fir/Fir.cpp:10:20: note: previous definition is here
   unsigned short *data_in, *data_out;
                   ^
bench_ready/Fir/Fir.cpp:18:19: error: redefinition of 'data_out' with a different type: 'unsigned short [(1 << 10) + taps]' vs 'unsigned short *'
   unsigned short data_out[DATA_SIZE+taps];
                  ^
bench_ready/Fir/Fir.cpp:10:30: note: previous definition is here
   unsigned short *data_in, *data_out;
                             ^
2 errors generated.
HLS FPGA Parse FAILED.
